--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+#body {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -6,14 +6,34 @@ body {
     align-content: center;
     line-height: 1.5;
     font-family: 'Baloo Tammudu 2', cursive;
+    /* background-color: #1983c4c5; */
+    
 }
 
 select, option {
     text-transform:capitalize;
 }
 
+label {
+    margin: 6px;
+}
+
+
+.title {
+    margin-top: 40px;
+    font-weight: 700;
+    font-size: 17vw;
+    color: #1982c4;
+    margin-bottom: -105px;
+}
+
+.controls {
+    position: absolute;
+    bottom: 20%;
+}
+
 .btn-generic {
-    background-color: #6A4C93;
+    background-color: #8ac926;
     border: none;
     border-radius: 5px;
     font-family: 'Baloo Tammudu 2', cursive;
@@ -21,32 +41,49 @@ select, option {
     font-size: medium;
     width: 200px;
     height: 40px;
+    padding-top: 4%;
     align-content: center;
+    vertical-align: middle;
 }
 
 .btn-generic:active {
-    background-color: #462a6e;
+    background-color: #6a991f;
 }
 
 .btn-generic:disabled {
-    background-color: #797979;
+    background-color: #a8a8a8;
 }
 
 .display {
     border-radius: 65% 35% 70% 30% / 52% 54% 46% 48% ;
+    border: 1px solid white;
     background-color: #1982C4;
     color: white;
-    height: 140px;
-    width: 400px;
-    padding: 30px;
+    width: 40%;
+    margin: 20px;
+    padding: 65px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     align-content: center;
     text-align: center;
+    vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+
+
+.categ-select-group {
+    margin: 12px;
+    vertical-align: middle;
 }
 
 #categories {
     color: #FFCA3A;
+    text-transform:capitalize;
+    padding-top: 20px;
 }
